# clockiduck

./: .env.example  .gitignore  README.md  pyproject.toml
project/: project.md
src/clockiduck/: __init__.py  clockify_client.py  config.py  database.py  sync.py
